cgroup-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cgroup-test
spec:
  containers:
  - name: cgroup
    image: busybox
    command: ["sh", "-c", "sleep 1d"]
    securityContext:
      privileged: true
  hostPID: true
  hostIPC: true
  hostNetwork: true
