ngix-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: ingress-nginx   
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "4.158.125.58.nip.io"
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: nginx  # The name of your service
            port:
              number: 80
